--- a/index.html
+++ b/index.html
@@ -60,13 +60,28 @@
       .btn:hover {
         background-color: #5c00b3;
       }
+      .graph {
+        width: 100%;
+        height: 50vh;
+        background-color: #1a1a1a;
+        margin-top: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .graph img {
+        max-width: 90%;
+        max-height: 90%;
+      }
     </style>
   </head>
   <body>
     <section class="hero">
       <h1>NFT Watcher</h1>
       <h2>Coming soon</h2>
-      <a href="#" class="btn">Join the waitlist</a>
+    </section>
+    <section class="graph">
+      <img src="https://dummyimage.com/800x600/000000/ffffff&text=Trader+Graph" alt="Trader Graph">
     </section>
   </body>
-</html> 
+</html>
