--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+Copy code
 <!DOCTYPE html>
 <html>
   <head>
     <title>NFT Watcher</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
       body {
         background-color: #1a1a1a;
@@ -17,25 +19,7 @@
         align-items: center;
         flex-direction: column;
         text-align: center;
-        background-image: linear-gradient(to bottom, #0c0c0c, #1a1a1a);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
         position: relative;
-      }
-      .hero:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-image: url('https://source.unsplash.com/collection/10654112/1600x900');
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-        opacity: 0.3;
-        z-index: -1;
       }
       h1 {
         font-size: 6rem;
@@ -60,18 +44,9 @@
       .btn:hover {
         background-color: #5c00b3;
       }
-      .graph {
-        width: 100%;
-        height: 50vh;
-        background-color: #1a1a1a;
-        margin-top: 2rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .graph img {
-        max-width: 90%;
-        max-height: 90%;
+      canvas {
+        max-width: 80%;
+        margin: 3rem 0;
       }
     </style>
   </head>
@@ -79,9 +54,9 @@
     <section class="hero">
       <h1>NFT Watcher</h1>
       <h2>Coming soon</h2>
+      <canvas id="myChart"></canvas>
+      <a href="#" class="btn">Join the waitlist</a>
     </section>
-    <section class="graph">
-      <img src="https://dummyimage.com/800x600/000000/ffffff&text=Trader+Graph" alt="Trader Graph">
-    </section>
+    <script src="./app.js"></script>
   </body>
 </html>
