--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>NFT Watcher</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
