--- a/index.html
+++ b/index.html
@@ -1,62 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
     <title>NFT Watcher</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
-        background-color: #1a1a1a;
+        background-color: #f0f6f9;
         font-family: Arial, sans-serif;
-        color: #fff;
+        color: #333;
         margin: 0;
         padding: 0;
       }
-      .hero {
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        position: relative;
+      .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 2rem;
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
       }
       h1 {
-        font-size: 6rem;
-        margin: 0;
-        padding: 0;
+        font-size: 3rem;
+        margin: 0 0 2rem 0;
+        text-align: center;
       }
-      h2 {
-        font-size: 2rem;
-        margin: 0;
-        padding: 0;
-      }
-      .btn {
-        padding: 1rem 2rem;
-        background-color: #7e00ff;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
+      p {
         font-size: 1.5rem;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-      .btn:hover {
-        background-color: #5c00b3;
-      }
-      canvas {
-        max-width: 80%;
-        margin: 3rem 0;
+        margin: 0 0 2rem 0;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    <section class="hero">
+    <div class="container">
       <h1>NFT Watcher</h1>
-      <h2>Coming soon</h2>
-      <canvas id="myChart"></canvas>
-      <a href="#" class="btn">Join the waitlist</a>
-    </section>
-    <script src="./app.js"></script>
+      <p>Coming soon</p>
+    </div>
   </body>
 </html>
