--- a/index.html
+++ b/index.html
@@ -1,47 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>NFT Watcher</title>
-    <style>
-      body {
-        background-color: #c5e3f6;
-        font-family: Arial, sans-serif;
-      }
-      .container {
-        margin: 0 auto;
-        max-width: 800px;
-        padding: 50px;
-        background-color: #fff;
-        box-shadow: 0px 0px 10px #888;
-        text-align: center;
-        position: relative;
-      }
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(192, 192, 192, 0.6);
-        z-index: -1;
-      }
-      h1 {
-        color: #000;
-        font-size: 50px;
-        margin-bottom: 20px;
-      }
-      p {
-        color: #000;
-        font-size: 30px;
-        margin-bottom: 50px;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>NFT Watcher</h1>
-      <p>Coming soon</p>
-      <div class="overlay"></div>
-    </div>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>NFT Watcher - Coming Soon</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div class="container">
+		<h1>NFT Watcher</h1>
+		<p>Coming soon</p>
+		<form>
+			<label>Join the waitlist:</label><br>
+			<input type="email" placeholder="Email address" required><br>
+			<input type="submit" value="Submit">
+		</form>
+	</div>
+</body>
 </html>
